Fix blue nav toggle button on iOS

--- a/src/scss/journal.scss
+++ b/src/scss/journal.scss
@@ -286,6 +286,7 @@ a {
       background: none !important;
       border: none;
       padding-top: 1px;
+      color: initial;
       &:hover {
         color: $color-nav-active !important;
       }
